--- a/circle.yml
+++ b/circle.yml
@@ -2,10 +2,21 @@ machine:
     python:
         version: 3.5.0
     services:
+        - docker
         - redis
+
+dependencies:
 
 test:
     override:
         - py.test tests:
             environment:
                 FLASK_ENV: test
+
+deployment:
+    idc:
+        branch: master
+        commands:
+            - docker build -t kirklandatdocker/flower:$(git rev-parse HEAD) .
+            - docker login -u kirklandatdocker -p ${KIRKLAND_DOCKER_HUB_PASSWORD}
+            - docker push kirklandatdocker/flower:$(git rev-parse HEAD)
