--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-WTF==0.12
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
+JSON-log-formatter==0.1.0
 MarkupSafe==0.23
 py==1.4.31
 pytest==2.9.2
