--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 click==6.6
 Flask==0.11.1
+Flask-Limiter==0.9.3
 Flask-Login==0.3.2
 Flask-Redis==0.3.0
 Flask-Script==2.0.5
@@ -9,10 +10,12 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 JSON-log-formatter==0.1.0
+limits==1.2.1
 MarkupSafe==0.23
 py==1.4.31
 pytest==2.9.2
 pytest-flask==0.10.0
 redis==2.10.5
+six==1.10.0
 Werkzeug==0.11.10
 WTForms==2.1
